update class notes

--- a/In Class Demonstrations/Project 9 - Partial Correlations and Directed Acyclic Graphs.ipynb
+++ b/In Class Demonstrations/Project 9 - Partial Correlations and Directed Acyclic Graphs.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3b80d3da-5135-4c12-94a1-91447ddacc67",
    "metadata": {},
    "source": [
     "# Project 9: Partial Correlations and Directed Acyclic Graphs\n"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "155667be-a22a-40a4-9204-841244c7a4c8",
    "metadata": {},
    "source": [
     "## Chains"
@@ -19,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c5afa633-5771-42d6-bff3-8c582a60c0c1",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "393b6d5e-4d03-4fa8-a4fc-4d0ba24362c3",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +162,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9d977bc7-4ad2-4852-b24e-52a34108e538",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +232,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "48a7f8c3-e85d-4791-b274-fd9eeb5beeed",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +262,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "60f17d2e-5c4f-4c37-bd57-52b7587e7c13",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +284,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9030f8d-fd2e-45ca-a707-bdaca19c26a7",
    "metadata": {},
    "source": [
     "If we control for $Y$, however, we see that that there is no longer any correlation between $X$ and $Z$. This is called a partial correlation. In the following matrix, partial correlations of each pair are calculated using the remaing variable as a control. We can interpret the result as:\n",
@@ -308,7 +300,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "db3ea4fd-9c02-4bac-a58f-071e5bc9ab3a",
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +459,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5a84284d-46b6-418b-a919-944319d46f9f",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +610,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8e8f7a68-2da8-48df-8ff6-1db2f2fd624c",
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +759,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7fb1ce37-f70c-46b3-a7b0-cfb4b41865b8",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +829,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "da2254ff-9070-4eea-8f1f-279a6839461c",
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +910,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4b764b4b-b936-4296-9ba6-2ef0846765dc",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +933,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3195230c-94e7-483c-bccd-8a9385849da5",
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1005,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3fd9b3ad-7d5b-4d73-bf4b-232ba88a448a",
    "metadata": {},
    "outputs": [
     {
@@ -1043,16 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18fd2cd1-6083-4ff7-bb3e-35e978f47e7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
-   "id": "2a265e82-46d3-4242-9c14-819b9c0d7233",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1037,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e731ad04-35de-44be-965f-a7dbeae5ccee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1070,7 +1044,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a68c6321-4689-45bf-83b5-7f0d01d81aec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1053,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1094,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
