fix geopands datatypes

--- a/Projects/SMP Data/Dollar and 10 Year UST.ipynb
+++ b/Projects/SMP Data/Dollar and 10 Year UST.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cb253d5b",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +74,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "12caabb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +86,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0faa8b37",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -96,7 +93,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0897644b",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +119,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "71570ede",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -210,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
