--- a/Projects/SMP Data/Interest Rates and Inflation.ipynb
+++ b/Projects/SMP Data/Interest Rates and Inflation.ipynb
@@ -538,7 +538,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -552,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
