in class project update

--- a/In Class Demonstrations/Project 11 - Chapter 8 - Advance Data Analysis.ipynb
+++ b/In Class Demonstrations/Project 11 - Chapter 8 - Advance Data Analysis.ipynb
@@ -3155,7 +3155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "id": "5adc412d-3533-4c2e-9abb-070d43a0b066",
    "metadata": {},
    "outputs": [
@@ -3170,7 +3170,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.131\n",
       "Method:                 Least Squares   F-statistic:                     130.0\n",
       "Date:                Tue, 23 Apr 2024   Prob (F-statistic):           1.97e-78\n",
-      "Time:                        14:00:36   Log-Likelihood:                 3946.6\n",
+      "Time:                        14:13:51   Log-Likelihood:                 3946.6\n",
       "No. Observations:                2577   AIC:                            -7885.\n",
       "Df Residuals:                    2573   BIC:                            -7862.\n",
       "Df Model:                           3                                         \n",
@@ -3198,7 +3198,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.129\n",
       "Method:                 Least Squares   F-statistic:                     125.0\n",
       "Date:                Tue, 23 Apr 2024   Prob (F-statistic):           1.75e-75\n",
-      "Time:                        14:00:36   Log-Likelihood:                 3451.0\n",
+      "Time:                        14:13:51   Log-Likelihood:                 3451.0\n",
       "No. Observations:                2523   AIC:                            -6894.\n",
       "Df Residuals:                    2519   BIC:                            -6871.\n",
       "Df Model:                           3                                         \n",
@@ -3225,226 +3225,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_26628\\4029499554.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_26628\\938768843.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X[\"Constant\"] = 1\n",
-      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_26628\\4029499554.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\JLCat\\AppData\\Local\\Temp\\ipykernel_26628\\938768843.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  X[\"Constant\"] = 1\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Data':                             EFW  Size of Government  \\\n",
-       " ISO_Code_3 Year                                       \n",
-       " AGO        2006-01-01  4.531179            5.162277   \n",
-       "            2007-01-01  4.550966            4.963676   \n",
-       "            2008-01-01  4.643633            4.715589   \n",
-       "            2009-01-01  5.251115            7.455501   \n",
-       "            2010-01-01  5.420828            6.310978   \n",
-       " ...                         ...                 ...   \n",
-       " ZWE        2014-01-01  5.999147            6.771807   \n",
-       "            2015-01-01  6.449595            6.964753   \n",
-       "            2016-01-01  6.121996            5.332597   \n",
-       "            2017-01-01  5.599886            4.699843   \n",
-       "            2018-01-01  5.876298            5.170946   \n",
-       " \n",
-       "                        Legal System and Property Rights  Sound Money  \\\n",
-       " ISO_Code_3 Year                                                        \n",
-       " AGO        2006-01-01                          3.238314     3.807267   \n",
-       "            2007-01-01                          3.224507     4.015297   \n",
-       "            2008-01-01                          3.382642     4.653201   \n",
-       "            2009-01-01                          3.394515     4.901540   \n",
-       "            2010-01-01                          3.573909     5.742319   \n",
-       " ...                                                 ...          ...   \n",
-       " ZWE        2014-01-01                          3.930143     7.664303   \n",
-       "            2015-01-01                          4.108142     7.859669   \n",
-       "            2016-01-01                          4.056407     8.086016   \n",
-       "            2017-01-01                          4.071445     7.983888   \n",
-       "            2018-01-01                          4.041897     7.312324   \n",
-       " \n",
-       "                        Freedom to Trade Internationally  Regulation  \\\n",
-       " ISO_Code_3 Year                                                       \n",
-       " AGO        2006-01-01                          5.302944    5.118114   \n",
-       "            2007-01-01                          5.139768    5.348260   \n",
-       "            2008-01-01                          5.181950    5.185843   \n",
-       "            2009-01-01                          5.503538    5.007256   \n",
-       "            2010-01-01                          5.755618    5.722125   \n",
-       " ...                                                 ...         ...   \n",
-       " ZWE        2014-01-01                          6.398692    5.039824   \n",
-       "            2015-01-01                          6.509231    6.555970   \n",
-       "            2016-01-01                          6.404937    6.520805   \n",
-       "            2017-01-01                          4.503965    6.399757   \n",
-       "            2018-01-01                          6.396649    6.303135   \n",
-       " \n",
-       "                        RGDP Per Capita   EFW Lag  Size of Government Lag  \\\n",
-       " ISO_Code_3 Year                                                            \n",
-       " AGO        2006-01-01         0.213689  4.214590                6.886311   \n",
-       "            2007-01-01         0.228898  4.531179                5.162277   \n",
-       "            2008-01-01         0.155329  4.550966                4.963676   \n",
-       "            2009-01-01         0.049731  4.643633                4.715589   \n",
-       "            2010-01-01         0.059307  5.251115                7.455501   \n",
-       " ...                                ...       ...                     ...   \n",
-       " ZWE        2014-01-01        -0.006254  5.517987                6.694422   \n",
-       "            2015-01-01        -0.021561  5.999147                6.771807   \n",
-       "            2016-01-01        -0.016807  6.449595                6.964753   \n",
-       "            2017-01-01         0.031043  6.121996                5.332597   \n",
-       "            2018-01-01         0.018185  5.599886                4.699843   \n",
-       " \n",
-       "                        Legal System and Property Rights Lag  Sound Money Lag  \\\n",
-       " ISO_Code_3 Year                                                                \n",
-       " AGO        2006-01-01                              3.129619         1.270081   \n",
-       "            2007-01-01                              3.238314         3.807267   \n",
-       "            2008-01-01                              3.224507         4.015297   \n",
-       "            2009-01-01                              3.382642         4.653201   \n",
-       "            2010-01-01                              3.394515         4.901540   \n",
-       " ...                                                     ...              ...   \n",
-       " ZWE        2014-01-01                              3.862720         6.387579   \n",
-       "            2015-01-01                              3.930143         7.664303   \n",
-       "            2016-01-01                              4.108142         7.859669   \n",
-       "            2017-01-01                              4.056407         8.086016   \n",
-       "            2018-01-01                              4.071445         7.983888   \n",
-       " \n",
-       "                        Freedom to Trade Internationally Lag  Regulation Lag  \\\n",
-       " ISO_Code_3 Year                                                               \n",
-       " AGO        2006-01-01                              5.356979        4.511067   \n",
-       "            2007-01-01                              5.302944        5.118114   \n",
-       "            2008-01-01                              5.139768        5.348260   \n",
-       "            2009-01-01                              5.181950        5.185843   \n",
-       "            2010-01-01                              5.503538        5.007256   \n",
-       " ...                                                     ...             ...   \n",
-       " ZWE        2014-01-01                              5.524457        4.946246   \n",
-       "            2015-01-01                              6.398692        5.039824   \n",
-       "            2016-01-01                              6.509231        6.555970   \n",
-       "            2017-01-01                              6.404937        6.520805   \n",
-       "            2018-01-01                              4.503965        6.399757   \n",
-       " \n",
-       "                        RGDP Per Capita Lag  North America  \n",
-       " ISO_Code_3 Year                                            \n",
-       " AGO        2006-01-01             0.190882              0  \n",
-       "            2007-01-01             0.213689              0  \n",
-       "            2008-01-01             0.228898              0  \n",
-       "            2009-01-01             0.155329              0  \n",
-       "            2010-01-01             0.049731              0  \n",
-       " ...                                    ...            ...  \n",
-       " ZWE        2014-01-01             0.000000              0  \n",
-       "            2015-01-01            -0.006254              0  \n",
-       "            2016-01-01            -0.021561              0  \n",
-       "            2017-01-01            -0.016807              0  \n",
-       "            2018-01-01             0.031043              0  \n",
-       " \n",
-       " [2577 rows x 15 columns],\n",
-       " 'Diff':                             EFW  Size of Government  \\\n",
-       " ISO_Code_3 Year                                       \n",
-       " AGO        2007-01-01  0.019787           -0.198601   \n",
-       "            2008-01-01  0.092667           -0.248087   \n",
-       "            2009-01-01  0.607482            2.739912   \n",
-       "            2010-01-01  0.169713           -1.144523   \n",
-       "            2011-01-01 -0.419291           -0.154738   \n",
-       " ...                         ...                 ...   \n",
-       " ZWE        2014-01-01  0.481160            0.077385   \n",
-       "            2015-01-01  0.450448            0.192946   \n",
-       "            2016-01-01 -0.327598           -1.632156   \n",
-       "            2017-01-01 -0.522110           -0.632754   \n",
-       "            2018-01-01  0.276411            0.471103   \n",
-       " \n",
-       "                        Legal System and Property Rights  Sound Money  \\\n",
-       " ISO_Code_3 Year                                                        \n",
-       " AGO        2007-01-01                         -0.013807     0.208030   \n",
-       "            2008-01-01                          0.158135     0.637904   \n",
-       "            2009-01-01                          0.011873     0.248340   \n",
-       "            2010-01-01                          0.179393     0.840779   \n",
-       "            2011-01-01                         -0.044856     0.000929   \n",
-       " ...                                                 ...          ...   \n",
-       " ZWE        2014-01-01                          0.067423     1.276724   \n",
-       "            2015-01-01                          0.177998     0.195365   \n",
-       "            2016-01-01                         -0.051734     0.226348   \n",
-       "            2017-01-01                          0.015037    -0.102128   \n",
-       "            2018-01-01                         -0.029548    -0.671564   \n",
-       " \n",
-       "                        Freedom to Trade Internationally  Regulation  \\\n",
-       " ISO_Code_3 Year                                                       \n",
-       " AGO        2007-01-01                         -0.163176    0.230146   \n",
-       "            2008-01-01                          0.042181   -0.162417   \n",
-       "            2009-01-01                          0.321589   -0.178587   \n",
-       "            2010-01-01                          0.252080    0.714869   \n",
-       "            2011-01-01                         -0.566676   -1.334948   \n",
-       " ...                                                 ...         ...   \n",
-       " ZWE        2014-01-01                          0.874236    0.093578   \n",
-       "            2015-01-01                          0.110539    1.516146   \n",
-       "            2016-01-01                         -0.104294   -0.035165   \n",
-       "            2017-01-01                         -1.900972   -0.121048   \n",
-       "            2018-01-01                          1.892685   -0.096622   \n",
-       " \n",
-       "                        RGDP Per Capita   EFW Lag  Size of Government Lag  \\\n",
-       " ISO_Code_3 Year                                                            \n",
-       " AGO        2007-01-01         0.015209  0.316589               -1.724034   \n",
-       "            2008-01-01        -0.073569  0.019787               -0.198601   \n",
-       "            2009-01-01        -0.105598  0.092667               -0.248087   \n",
-       "            2010-01-01         0.009576  0.607482                2.739912   \n",
-       "            2011-01-01         0.004478  0.169713               -1.144523   \n",
-       " ...                                ...       ...                     ...   \n",
-       " ZWE        2014-01-01        -0.006254  0.153562               -0.404905   \n",
-       "            2015-01-01        -0.015307  0.481160                0.077385   \n",
-       "            2016-01-01         0.004754  0.450448                0.192946   \n",
-       "            2017-01-01         0.047850 -0.327598               -1.632156   \n",
-       "            2018-01-01        -0.012857 -0.522110               -0.632754   \n",
-       " \n",
-       "                        Legal System and Property Rights Lag  Sound Money Lag  \\\n",
-       " ISO_Code_3 Year                                                                \n",
-       " AGO        2007-01-01                              0.108695         2.537185   \n",
-       "            2008-01-01                             -0.013807         0.208030   \n",
-       "            2009-01-01                              0.158135         0.637904   \n",
-       "            2010-01-01                              0.011873         0.248340   \n",
-       "            2011-01-01                              0.179393         0.840779   \n",
-       " ...                                                     ...              ...   \n",
-       " ZWE        2014-01-01                              0.026921         0.585575   \n",
-       "            2015-01-01                              0.067423         1.276724   \n",
-       "            2016-01-01                              0.177998         0.195365   \n",
-       "            2017-01-01                             -0.051734         0.226348   \n",
-       "            2018-01-01                              0.015037        -0.102128   \n",
-       " \n",
-       "                        Freedom to Trade Internationally Lag  Regulation Lag  \\\n",
-       " ISO_Code_3 Year                                                               \n",
-       " AGO        2007-01-01                             -0.054035        0.607047   \n",
-       "            2008-01-01                             -0.163176        0.230146   \n",
-       "            2009-01-01                              0.042181       -0.162417   \n",
-       "            2010-01-01                              0.321589       -0.178587   \n",
-       "            2011-01-01                              0.252080        0.714869   \n",
-       " ...                                                     ...             ...   \n",
-       " ZWE        2014-01-01                             -0.197452        0.764520   \n",
-       "            2015-01-01                              0.874236        0.093578   \n",
-       "            2016-01-01                              0.110539        1.516146   \n",
-       "            2017-01-01                             -0.104294       -0.035165   \n",
-       "            2018-01-01                             -1.900972       -0.121048   \n",
-       " \n",
-       "                        RGDP Per Capita Lag  North America  \n",
-       " ISO_Code_3 Year                                            \n",
-       " AGO        2007-01-01             0.022807              0  \n",
-       "            2008-01-01             0.015209              0  \n",
-       "            2009-01-01            -0.073569              0  \n",
-       "            2010-01-01            -0.105598              0  \n",
-       "            2011-01-01             0.009576              0  \n",
-       " ...                                    ...            ...  \n",
-       " ZWE        2014-01-01            -0.057085              0  \n",
-       "            2015-01-01            -0.006254              0  \n",
-       "            2016-01-01            -0.015307              0  \n",
-       "            2017-01-01             0.004754              0  \n",
-       "            2018-01-01             0.047850              0  \n",
-       " \n",
-       " [2523 rows x 15 columns]}"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3459,10 +3252,7 @@
     "    y = reg_data[y_name]\n",
     "    print(key)\n",
     "    results = sm.OLS(y, X).fit()\n",
-    "    print(results.summary())\n",
-    "\n",
-    "\n",
-    "data_dict"
+    "    print(results.summary())"
    ]
   },
   {
